# claymore

./: .gitignore  Cargo.toml  README.md
components/claymore/: Cargo.toml
components/claymore/src/: lib.rs
components/key/: Cargo.toml
components/key/src/: base24.rs
components/license/: Cargo.toml
components/license/src/: deserialize.rs  lib.rs
components/product/: Cargo.toml
components/product/src/: deserialize.rs  lib.rs
examples/: Cargo.toml  keygen.rs  pid_checker.rs
src/: keyinfo.rs  lib.rs  main.rs  pkeyconfig.rs  util.rs
src/keyinfo/: base24.rs  crc32b.rs  mod.rs
src/pkeyconfig/: decode.rs  mod.rs
src/pkeyinfo/: mod.rs
src/util/: base24.rs  crc32b.rs
src/vamtlite/: mod.rs  request.rs
tests/: win8.rs
