[package]
name = "claymore-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "claymore-rs"
path = "src/main.rs"

[lib]
name = "claymore"
path = "src/lib.rs"


[dependencies]
base64 = "0.13.0"
crc = "2.0"
quick-xml = { version = "0.21", features = [ "serialize" ] }
serde = { version = "1.0", features = [ "derive" ] }
regex = "1"
