[package]
name = "claymore"
version = "0.1.0"
edition = "2018"

[lib]
name = "claymore"
path = "src/lib.rs"

[dependencies]
base64 = "0.13.0"
chrono = "0.4"
crc = "2.0"
hex-literal = "0.3.3"
hmac = "0.11.0"
quick-xml = { version = "0.21", features = [ "serialize" ] }
rand = "0.8.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = [ "derive" ] }
sha2 = "0.9.5"
tokio = { version = "1", features = ["full"] }
