[package]
name = "claymore_license"
version = "0.0.1"
edition = "2018"

[dependencies]
base64 = "0.13.0"
hex-literal = "0.3.3"
hmac = "0.11.0"
quick-xml = { version = "0.21", features = [ "serialize" ] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = [ "derive" ] }
sha2 = "0.9.5"
tokio = { version = "1", features = ["full"] }
